FP-1417: Prevent Extra Space Around Image
Happens when text need not wrap (super wide screens, super short text).

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/c-callout.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/c-callout.css
@@ -58,7 +58,8 @@ Styleguide Components.Callout
     padding: 20px;
     text-align: left;
 
-    grid-template-rows: min-content;
+    grid-template-columns: min-content; /* prevent extra horz. space in cell */
+    grid-template-rows: min-content;    /* prevent extra vert. space in cell */
     grid-template-areas:
       'figure title'
       'figure desc';
